--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = OCA/web
 	url = git@github.com:OCA/web.git
 	branch = 11.0
+
+[submodule "archeti/addons"]
+	path = archeti/addons
+	url = git@gitlab.com:archeti/odoo_addons.git
+	branch = 11.0
